fix: post, auth y swagger
